--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,9 @@ language: cpp
 dist: xenial
 before_script:
 - sudo apt-add-repository -y "deb http://archive.ubuntu.com/ubuntu xenial main universe"
-- sudo apt-get install -y libgtest-dev build-essential cmake clang-6.0
+- sudo add-apt-repository -y "ppa:ubuntu-toolchain-r/test"
+- sudo apt-get install -y libgtest-dev build-essential cmake clang-6.0 gcc-8 g++-8
+- sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-8 60 --slave /usr/bin/g++ g++ /usr/bin/g++-8
 - pushd /usr/src/gtest
 - sudo cmake .
 - sudo cmake --build . -- -j "`nproc`"
