tst/CMakeLists.txt: change project name for tests (copy&paste issue)

--- a/tst/CMakeLists.txt
+++ b/tst/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required (VERSION 3.12)
 
 # Project stuff
-project (ipfilter_tst
+project (allocator_tst
 	VERSION 0.0.${TRAVIS_BUILD_NUMBER}
 	DESCRIPTION "Homework 3 Allocator & Container implementation tests"
 	HOMEPAGE_URL "https://github.com/edwdmkrv/allocator/tree/master/tst"
